# timetable-iiith

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  tailwind.config.js  tailwind_output.css
.github/workflows/: format-check.yml  static.yml
data/: almanac_s25.json  data.json  data_m24.json  data_m25.json  data_s25.json  data_s26.json  timeslots.json
src/: App.jsx  config.rs  index.css  main.jsx  main.rs  model.rs
src/components/: ConflictingCourses.jsx  CourseSelection.jsx  Navbar.jsx  Timetable.jsx  UsageModel.jsx  facts.rs  mod.rs  modal.rs  search.rs  timetable.rs
src/context/: CourseProvider.jsx
src/pages/: Homepage.jsx
src/utils/: data_parser.js  export.js  get_top_points.js
