[package]
name = "timetable-iiith"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.8.14", features = ["csr"] }
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3", features = ["MouseEvent"] }
